[tool.poetry]
name = "files-matatika-lab"
version = "0.1.0"
description = "Meltano file bundle to run the Matatika Lab using Docker."
authors = ["Reuben Frankel <rfrankel@matatika.com>"]
readme = "README.md"
packages = [{include = "files_matatika_lab"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
