[tool.poetry]
name = "files-matatika-lab"
version = "0.1.0"
description = "Meltano file bundle to run the Matatika Lab using Docker."
authors = ["Reuben Frankel <rfrankel@matatika.com>"]
readme = "README.md"
packages = [{include = "bundle"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.28.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
